--- a/dic_cafe/css/main.css
+++ b/dic_cafe/css/main.css
@@ -101,15 +101,17 @@ li {
 }
 .footer_nav {
   display: flex;
-  text-align: center;
   margin-bottom: 10px;
-  flex-direction: row;
   justify-content: center;
 }
 .footer_nav_item {
+  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
   color: white;
-  align-content: center;
-  justify-content: space-between;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 15px;
 }
 .footer_logo {
   width: 120px;
